--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.7.4",
+    "@babel/preset-env": "^7.7.4",
+    "babel": "^6.23.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.0.6",
     "browser-sync": "^2.26.12",
+    "core-js": "^3.4.2",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^6.1.0",
     "gulp-clean-css": "^4.3.0",
@@ -20,13 +26,7 @@
     "gulp-sass": "^4.1.0",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0",
-    "webpack-stream": "^5.2.1",
-    "@babel/core": "^7.7.4",
-    "@babel/preset-env": "^7.7.4",
-    "babel": "^6.23.0",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^8.0.6",
-    "core-js": "^3.4.2"
+    "webpack-stream": "^5.2.1"
   },
   "browserslist": [
     "last 1 version",
